--- a/styles.css
+++ b/styles.css
@@ -4,35 +4,13 @@
 	padding: 0;
 }
 
-body {
-	background-color: var(--bg);
-	color: var(--fg);
-	font-family: 'Inter', sans-serif;
-	line-height: 1.6;
-	font-size: 16px;
-	padding-bottom: 3rem;
-	opacity: 0;
-	transform: translateY(10px);
-	animation: pageFadeInUp 1.5s ease forwards;
-}
+/* Define Animations */
 
 @keyframes pageFadeInUp {
 	to {
 		opacity: 1;
 		transform: translateY(0);
 	}
-}
-
-/*-------BACKGROUND EFFECTS BLOCK-----------------------------------------------------*/
-body::before {
-	content: "";
-	position: fixed;
-	inset: 0;
-	background: radial-gradient(circle at 30% 30%, rgba(255, 255, 255, 0.04), transparent 30%),
-		radial-gradient(circle at 70% 70%, rgba(255, 255, 255, 0.04), transparent 30%);
-	background-size: 200% 200%;
-	animation: fogMove 30s ease-in-out infinite;
-	pointer-events: none;
 }
 
 @keyframes fogMove {
@@ -49,6 +27,45 @@ body::before {
 	}
 }
 
+@keyframes breathing {
+	0% {
+		transform: scale(0.9);
+	}
+
+	50% {
+		transform: scale(0.94);
+	}
+
+	100% {
+		transform: scale(0.9);
+	}
+}
+
+
+body {
+	background-color: var(--bg);
+	color: var(--fg);
+	font-family: 'Inter', sans-serif;
+	line-height: 1.6;
+	font-size: 16px;
+	padding-bottom: 3rem;
+	opacity: 0;
+	transform: translateY(10px);
+	animation: pageFadeInUp 1.5s ease forwards;
+}
+
+/*-------BACKGROUND EFFECTS BLOCK-----------------------------------------------------*/
+body::before {
+	content: "";
+	position: fixed;
+	inset: 0;
+	background: radial-gradient(circle at 30% 30%, rgba(255, 255, 255, 0.04), transparent 45%),
+		radial-gradient(circle at 70% 70%, rgba(255, 255, 255, 0.04), transparent 45%);
+	background-size: 200% 200%;
+	animation: fogMove 30s ease-in-out infinite;
+	pointer-events: none;
+}
+
 /*------------------------------------------------------------------------------------*/
 
 h2 {
@@ -59,19 +76,8 @@ h2 {
 .name {
 	font-family: 'JetBrains Mono', monospace;
 	text-shadow: 2px 2px #434343;
-	animation: float 4s ease-in-out infinite;
-}
-
-@keyframes float {
-
-	0%,
-	100% {
-		transform: translateY(0);
-	}
-
-	50% {
-		transform: translateY(-2px);
-	}
+	/* animation: float 4s ease-in-out infinite; */
+	animation: breathing 10.5s infinite;
 }
 
 .container {
@@ -105,20 +111,10 @@ h2 {
 	color: var(--gray4);
 	font-family: 'JetBrains Mono', monospace;
 	font-size: 1.1rem;
-	animation: float 4s ease-in-out infinite;
+	animation: breathing 10.5s infinite;
 }
 
-@keyframes float {
 
-	0%,
-	100% {
-		transform: translateY(0);
-	}
-
-	50% {
-		transform: translateY(-2px);
-	}
-}
 
 .experience-item ul {
 	margin-top: 0.7rem;
